Removed unused pair element.