@@ -1,11 +1,8 @@
 package com.mmxlabs.models.lng.transformer.extensions.groupedslots;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.google.inject.Inject;
-import com.mmxlabs.common.Pair;
-import com.mmxlabs.common.parser.series.CalendarMonthMapper;
 import com.mmxlabs.models.lng.cargo.CargoModel;
 import com.mmxlabs.models.lng.cargo.DischargeSlot;
 import com.mmxlabs.models.lng.cargo.GroupedSlotsConstraint;
@@ -14,7 +11,6 @@ import com.mmxlabs.models.lng.scenario.model.LNGScenarioModel;
 import com.mmxlabs.models.lng.scenario.model.util.ScenarioModelUtil;
 import com.mmxlabs.models.lng.transformer.ITransformerExtension;
 import com.mmxlabs.models.lng.transformer.ModelEntityMap;
-import com.mmxlabs.models.lng.transformer.util.DateAndCurveHelper;
 import com.mmxlabs.scheduler.optimiser.builder.ISchedulerBuilder;
 import com.mmxlabs.scheduler.optimiser.components.IDischargeOption;
 import com.mmxlabs.scheduler.optimiser.providers.IGroupedSlotsConstraintDataProviderEditor;
@@ -29,12 +25,6 @@ public class GroupedSlotsTransformer implements ITransformerExtension {
 	@Inject
 	private ModelEntityMap modelEntityMap;
 
-	@Inject
-	private CalendarMonthMapper calendarMonthMapper;
-
-	@Inject
-	private DateAndCurveHelper dateAndCurveHelper;
-
 	@Override
 	public void startTransforming(final LNGScenarioModel rootObject, final ModelEntityMap modelEntityMap, final ISchedulerBuilder builder) {
 		this.rootObject = rootObject;
@@ -44,9 +34,7 @@ public class GroupedSlotsTransformer implements ITransformerExtension {
 	public void finishTransforming() {
 		final CargoModel cargoModel = ScenarioModelUtil.getCargoModel(rootObject);
 		for (final GroupedSlotsConstraint<SalesContract, DischargeSlot> eConstraint : cargoModel.getGroupedDischargeSlots()) {
-			final List<Pair<IDischargeOption, Integer>> oSlots = eConstraint.getSlots().stream().<Pair<IDischargeOption, Integer>> map(s -> Pair
-					.of(modelEntityMap.getOptimiserObjectNullChecked(s, IDischargeOption.class), calendarMonthMapper.mapChangePointToMonth(dateAndCurveHelper.convertTime(s.getWindowStart()))))
-					.collect(Collectors.toList());
+			final List<IDischargeOption> oSlots = eConstraint.getSlots().stream().map(s -> modelEntityMap.getOptimiserObjectNullChecked(s, IDischargeOption.class)).toList();
 			groupedSlotsConstraintEditor.addMinDischargeSlots(oSlots, eConstraint.getMinimumBound());
 		}
 	}
